# granian

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  example_partial_file.py  pyproject.toml  setup.py
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: _pgo_deps.txt  bechmarks.yml  benchmarks.yml  benchmarks_ext.yml  build.yml  lint.yml  release.yml  test.yml
benchmarks/: README.md  _template.md  asyncio.md  benchmarks.py  concurrency.md  pyver.md  render.sh  runbench.sh  vs.md  wrk.lua  wrk.post.lua
benchmarks/app/: asgi.py  rsgi.py  rsgi2.py  rsgi2_sync.py  wsgi.py
benchmarks/envs/: asgi.txt  base.txt  common.txt  wsgi.txt
benchmarks/templates/: _files.md  _files.tpl  _helpers.tpl  _http2.md  _ifaces.md  _ifaces.tpl  _rsgi.md  _rsgi.tpl  _table.tpl  _vs_table.tpl  _vs_ws_table.tpl  asyncio.md  concurrency.md  concurrency.tpl  main.md  main.tpl  pyver.md  vs.md  vs.tpl
benchmarks/ws/: benchmark.py
benchmarks/ws/app/: asgi.py  rsgi.py
docs/spec/: RSGI.md
granian/: __init__.py  __main__.py  __version__.py  _compat.py  _futures.py  _granian.pyi  _imports.py  _internal.py  _loops.py  _signals.py  _tasks.py  _types.py  asgi.py  asgi.pyi  cli.py  constants.py  errors.py  files.py  http.py  io.py  io.pyi  log.py  metrics.py  net.py  rsgi.py  rsgi.pyi  rsgi2.py  server.py  workers.py  wsgi.py
granian/server/: __init__.py  _runtimes.py  common.py  embed.py  mp.py  mt.py
granian/utils/: proxies.py  range.py
lib/pyo3-asyncio/: Cargo.toml  Contributing.md  Makefile  README.md
lib/pyo3-asyncio/.githooks/: pre-commit  pre-push
lib/pyo3-asyncio/.github/: issue_template.md  pull_request_template.md
lib/pyo3-asyncio/.github/workflows/: ci.yml  guide.yml
lib/pyo3-asyncio/examples/: async_std.rs  tokio.rs  tokio_current_thread.rs  tokio_multi_thread.rs
lib/pyo3-asyncio/pyo3-asyncio-macros/: Cargo.toml
lib/pyo3-asyncio/pyo3-asyncio-macros/src/: lib.rs  tokio.rs
lib/pyo3-asyncio/pytests/: test_async_std_asyncio.rs  test_async_std_run_forever.rs  test_async_std_uvloop.rs  test_tokio_current_thread_asyncio.rs  test_tokio_current_thread_run_forever.rs  test_tokio_current_thread_uvloop.rs  test_tokio_multi_thread_asyncio.rs  test_tokio_multi_thread_run_forever.rs  test_tokio_multi_thread_uvloop.rs
lib/pyo3-asyncio/pytests/common/: mod.rs
lib/pyo3-asyncio/pytests/tokio_asyncio/: mod.rs
lib/pyo3-asyncio/pytests/tokio_run_forever/: mod.rs
lib/pyo3-asyncio/src/: async_std.rs  err.rs  generic.rs  lib.rs  testing.rs  tokio.rs
src/: asyncio.rs  blocking.rs  callbacks.rs  conversion.rs  files.rs  http.rs  io.rs  ipc.rs  lib.rs  metrics.rs  net.rs  runtime.rs  serve.rs  sys.rs  tcp.rs  tls.rs  utils.rs  workers.rs  ws.rs
src/asgi/: callbacks.rs  conversion.rs  errors.rs  http.rs  io.rs  mod.rs  serve.rs  types.rs  utils.rs
src/metrics/: collector.rs  error.rs  events.rs  mod.rs  recorder.rs
src/rsgi/: callbacks.rs  conversion.rs  errors.rs  http.rs  io.rs  mod.rs  serve.rs  types.rs
src/rsgi2/: app.rs  callbacks.rs  http.rs  io.rs  mod.rs  serve.rs  workers.rs
src/wsgi/: callbacks.rs  errors.rs  http.rs  io.rs  mod.rs  serve.rs  types.rs  utils.rs
tests/: conftest.py  test_access_log.py  test_asgi.py  test_cli.py  test_dual_socket.py  test_embed.py  test_https.py  test_lock.py  test_metrics.py  test_range_parser.py  test_restart.py  test_rsgi.py  test_static_files.py  test_sysmon.py  test_tls_extension.py  test_uds.py  test_ws.py  test_wsgi.py
tests/apps/: asgi.py  restart.py  rsgi.py  wsgi.py
tests/fixtures/: media.png.br  media.png.zst  precompressed.txt  precompressed.txt.br
tests/fixtures/index_ok/: index.html
tests/fixtures/tls/: cert.pem  clientca.pem  clientcert.pem  clientchaincert.pem  clientchainkey.pem  clientkey.pem  crl.pem  key.pem  pcert.pem  pkey.pem  revokedcert.pem  revokedkey.pem  roguecert.pem  roguekey.pem
