[package]
name = "granian"
version = "2.2.6"
description = "A Rust HTTP server for Python applications"
authors = ["Giovanni Barillari <g@baro.dev>"]
license = "BSD-3-Clause"
edition = "2021"

keywords = ["web", "asyncio"]

readme = "README.md"
homepage = "https://github.com/emmett-framework/granian"
repository = "https://github.com/emmett-framework/granian"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
    "/src",
    "/granian",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_granian"
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0"
bus = "=2.4"
crossbeam-channel = "0.5"
futures = "=0.3"
http-body-util = { version = "=0.1" }
hyper = { version = "=1.6", features = ["http1", "http2", "server"] }
hyper-util = { version = "=0.1", features = ["server-auto", "tokio"] }
itertools = "0.14"
log = "0.4"
mimalloc = { version = "0.1.43", default-features = false, features = ["local_dynamic_tls"], optional = true }
pem = "=3.0"
percent-encoding = "=2.3"
pin-project-lite = "=0.2"
pkcs8 = { version = "=0.10", features = ["encryption", "pkcs5"] }
pyo3 = { version = "=0.24", features = ["anyhow", "extension-module", "generate-import-lib"] }
pyo3-log = "=0.12"
rustls-pemfile = "2.2"
socket2 = { version = "=0.5.8", features = ["all"] }
tls-listener = { version = "=0.11", features = ["rustls-ring"] }
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "=0.26"
tokio-util = { version = "0.7", features = ["codec", "rt"] }

[target.'cfg(not(any(target_env = "musl", target_os = "freebsd", target_os = "openbsd", target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6.0", default-features = false, features = ["disable_initial_exec_tls"] }

[build-dependencies]
pyo3-build-config = "=0.24"

[features]
mimalloc = ["dep:mimalloc"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"
