[package]
name = "granian"
version = "2.6.0"
description = "A Rust HTTP server for Python applications"
authors = ["Giovanni Barillari <g@baro.dev>"]
license = "BSD-3-Clause"
edition = "2024"

keywords = ["web", "asyncio"]

readme = "README.md"
homepage = "https://github.com/emmett-framework/granian"
repository = "https://github.com/emmett-framework/granian"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
    "/src",
    "/granian",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_granian"
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0"
crossbeam-channel = "0.5"
encoding_rs = "=0.8"
futures = "=0.3"
futures-util = { version = "=0.3", default-features = false }
http-body-util = { version = "=0.1" }
hyper = { version = "=1.8", features = ["http1", "http2", "server"] }
hyper-util = { version = "=0.1", features = ["server-auto", "tokio"] }
itertools = "0.14"
log = "0.4"
mimalloc = { version = "0.1.43", default-features = false, features = ["local_dynamic_tls", "v3"], optional = true }
mime_guess = "=2.0"
pem = "=3.0"
percent-encoding = "=2.3"
pin-project-lite = "=0.2"
pkcs8 = { version = "=0.10", features = ["encryption", "pkcs5"] }
pyo3 = { version = "=0.27", features = ["anyhow", "bytes", "extension-module", "generate-import-lib"] }
pyo3-log = { version = "=0.13", git = "https://github.com/gi0baro/pyo3-log.git", branch = "pyo3-027" }
rustls-pemfile = "2.2"
socket2 = { version = "=0.6", features = ["all"] }
sysinfo = "=0.37"
tikv-jemallocator = { version = "0.6.0", default-features = false, features = ["disable_initial_exec_tls"], optional = true }
tls-listener = { version = "=0.11", git = "https://github.com/gi0baro/tls-listener.git", branch = "0.11.x", features = ["rustls-ring", "rustls-tls12"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "=0.28"
tokio-util = { version = "0.7", features = ["codec", "rt"] }

[build-dependencies]
pyo3-build-config = "=0.27"

[features]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.unstripped]
inherits = "release"
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true
strip = false
