[project]
name = "granian"
authors = [
    {name = "Giovanni Barillari", email = "g@baro.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP"
]

dynamic = [
    "description",
    "keywords",
    "license",
    "readme",
    "version"
]

requires-python = ">=3.7"
dependencies = [
    "watchfiles~=0.18",
    "typer~=0.4",
    "uvloop~=0.17.0; sys_platform != 'win32' and platform_python_implementation == 'CPython'"
]

[project.optional-dependencies]
test = [
    "httpx~=0.23.0",
    "pytest~=7.1.2",
    "pytest-asyncio~=0.18.3",
    "websockets~=10.3"
]

[project.urls]
Homepage = "https://github.com/emmett-framework/granian"
Funding = "https://github.com/sponsors/gi0baro"
Source = "https://github.com/emmett-framework/granian"

[project.scripts]
granian = "granian:cli.cli"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
