[project]
name = "granian"
authors = [
    {name = "Giovanni Barillari", email = "g@baro.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP"
]

dynamic = [
    "description",
    "keywords",
    "license",
    "readme",
    "version"
]

requires-python = ">=3.8"
dependencies = [
    "watchfiles~=0.18",
    "typer~=0.4",
    "uvloop~=0.17.0; sys_platform != 'win32' and platform_python_implementation == 'CPython'"
]

[project.optional-dependencies]
test = [
    "black~=23.7.0",
    "httpx~=0.23.0",
    "pytest~=7.1.2",
    "pytest-asyncio~=0.18.3",
    "ruff~=0.0.287",
    "websockets~=10.3"
]

[project.urls]
Homepage = "https://github.com/emmett-framework/granian"
Funding = "https://github.com/sponsors/gi0baro"
Source = "https://github.com/emmett-framework/granian"

[project.scripts]
granian = "granian:cli.cli"

[build-system]
requires = ["maturin>=1.1.0,<1.3.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "granian._granian"
bindings = "pyo3"

[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = ['E501']
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 13 }
isort = { combine-as-imports = true, lines-after-imports = 2, known-first-party = ['granian', 'tests'] }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
color = true
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = true
skip-magic-trailing-comma = true
